# zbackup

./: .gitignore  Makefile.am  README  configure.ac  zbackup  zbackup.conf.example
python/: Makefile.am  setup.py
python/zbackup/: Makefile.am  rsync.py  zconfig.py  zfs.py  zlog.py  zvolume.py
